# closed_chain_affordance

./: .gitignore  LICENSE  README.md
Cpp/affordance_util/: CMakeLists.txt
Cpp/affordance_util/include/affordance_util/: affordance_util.hpp
Cpp/affordance_util/src/: affordance_util.cpp  affordance_util_tester.cpp
Cpp/affordance_util/src/affordance_util/: affordance_util.cpp
Cpp/cc_affordance_planner/src/: cc_affordance_planner_tester.cpp
Cpp/include/closedchain_affordance/: closedchain_affordance_util.hpp
Cpp/src/closedchain_affordance/: closedchain_affordance_util.cpp
Matlab/: ClosedChainAffordancePlanner.m  RobotBuilder.m
Matlab/src/: ClosedChainAffordancePlanner.m  ClosureErrorOptimizer.m  FKPlotter.m  RobotBuilder.m  screwPathCreator.m  tM.m
Paper Diagrams/: 4barDaviesMethod.drawio  ClosedChainUR5.drawio  description_of_a_screw.drawio  wheel_valve_affordance.drawio
affordance_util/: .gitignore  CMakeLists.txt  Config.cmake.in
affordance_util/include/affordance_util/: affordance_util.hpp
affordance_util/src/: affordance_util_tester.cpp
affordance_util/src/affordance_util/: affordance_util.cpp
affordance_util/src/test/: cca_kinova_gen3_7dof_description.yaml  cca_spot_description.yaml  kinova_gen3_7dof.urdf  spot.urdf
cc_affordance_planner/: CMakeLists.txt  Config.cmake.in
cc_affordance_planner/include/cc_affordance_planner/: cc_affordance_planner.hpp  cc_affordance_planner_interface.hpp
cc_affordance_planner/include/jthread/: README.md
cc_affordance_planner/src/: cc_affordance_planner_tester.cpp
cc_affordance_planner/src/cc_affordance_planner/: cc_affordance_planner.cpp  cc_affordance_planner_cur_snap.cpp  cc_affordance_planner_interface.cpp  cc_affordance_planner_old_snap.cpp
closed_chain_affordance/affordance_util/src/: affordance_util_tester.cpp
closed_chain_affordance/cc_affordance_planner/: CMakeLists.txt
closed_chain_affordance/cc_affordance_planner/src/: cc_affordance_planner_tester.cpp
diagrams/: ClosedChainUR5_with_prismatic_joints.drawio  affordance_virtual_link.drawio  description_of_a_screw.drawio  sim_pure_rot_start_config.drawio  sim_pure_trans_start_config.drawio  sim_screw_start_config.drawio  valve_turn_styles.drawio  valve_turn_styles_not_preserving_hand_orientation.drawio  valve_turn_styles_preserving_hand_orientation.drawio  valve_turn_styles_rotating_hand_in_tandem_with_the_valve.drawio  wheel_valve_affordance.drawio
real_robot_data_plots_and_demos/: planning_time_avg_sd_computation.xlsx  real_robot_experiments_start_config_and_screw_location.xlsx
real_robot_data_plots_and_demos/comparison_experiments/: comparison_data_summary_spreadsheet_w_charts.xlsx  joint_distance_illustration.drawio
real_robot_data_plots_and_demos/comparison_experiments/opening_a_pelican_case/: opening_a_pelican_case_w_screw_axis.drawio
real_robot_data_plots_and_demos/comparison_experiments/unfastening_a_nut/: unfastening_a_nut_w_screw_axis.drawio
real_robot_data_plots_and_demos/comparison_experiments/unzipping_a_dufflebag/: unzipping_a_dufflebag_w_screw_axis.drawio
real_robot_data_plots_and_demos/moving_a_stool/: act_tf_and_joint_states_data.csv  ee_position_and_joint_states_plotter.m  moving_a_stool_w_screw_axis.drawio  other_info.txt  pred_tf_and_joint_states_data.csv
real_robot_data_plots_and_demos/orientation_experiments/: act_quat_to_euler.py  case_index.txt  pred_quat_to_euler.py
real_robot_data_plots_and_demos/orientation_experiments/fix_in_body_x/: other_info.txt  pred_tf_and_joint_states_data.csv
real_robot_data_plots_and_demos/orientation_experiments/fix_in_body_x2/: .~lock.console_output_fix_in_body_x2.odt#  ee_position_and_joint_states_plotter.asv  ee_position_and_joint_states_plotter.m  other_info.txt
real_robot_data_plots_and_demos/orientation_experiments/fix_in_body_y/: act_tf_and_joint_states_data.csv  act_tf_and_joint_states_data_euler.csv  act_tf_and_joint_states_data_with_euler.xlsx  ee_position_and_joint_states_plotter.m  pred_tf_and_joint_states_data.csv  pred_tf_and_joint_states_data_with_euler.xlsx
real_robot_data_plots_and_demos/orientation_experiments/fix_in_world/: act_tf_and_joint_states_data_euler.xlsx  act_tf_and_joint_states_data_org.csv  act_tf_and_joint_states_data_with_euler.xlsx  ee_position_and_joint_states_plotter.m  other_info.txt  pred_tf_and_joint_states_data_with_euler.xlsx
real_robot_data_plots_and_demos/orientation_experiments/fixed_wrt_base_frame/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv  pred_tf_and_joint_states_data_euler.xlsx
real_robot_data_plots_and_demos/orientation_experiments/fixed_wrt_gripper_frame/: act_tf_and_joint_states_data.csv  fix_in_body_y_start_pose.drawio  pred_tf_and_joint_states_data_euler.csv
real_robot_data_plots_and_demos/orientation_experiments/free/: act_tf_and_joint_states_data.csv  act_tf_and_joint_states_data_euler.csv  act_tf_and_joint_states_data_euler.xlsx  (+2 more)
real_robot_data_plots_and_demos/pulling_a_drawer/: act_tf_and_joint_states_data.csv  ee_position_and_joint_states_plotter.m  other_info.txt  pred_tf_and_joint_states_data.csv  pulling_a_drawer_w_screw_axis.drawio
real_robot_data_plots_and_demos/pushing_a_drawer/: act_tf_and_joint_states_data.csv  ee_position_and_joint_states_plotter.m  other_info.txt  pred_tf_and_joint_states_data.csv  pushing_a_drawer_w_screw_axis.drawio
real_robot_data_plots_and_demos/turning_a_valve2/: ee_position_and_joint_states_plotter_as_subplots.m  turning_a_valve_w_screw_axis.drawio
real_robot_data_plots_and_demos/turning_a_valve4/: ee_position_and_joint_states_plotter_as_subplots.m  pred_tf_and_joint_states_data.csv
ros/affordance_util_ros/: CMakeLists.txt  package.xml
ros/apriltag_setup/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ros/cc_affordance_planner/: CMakeLists.txt  package.xml
ros/cc_affordance_planner_ros/: CMakeLists.txt  package.xml
ros/cc_affordance_spot_description/: CMakeLists.txt  package.xml
ros/joint_traj_and_tf_recorder/: CMakeLists.txt  package.xml
ros/moveit_plan_and_viz/: CMakeLists.txt  package.xml
(+125 files in other folders)
